--- a/mvcsample/pom.xml
+++ b/mvcsample/pom.xml
@@ -9,7 +9,7 @@
   <url>http://maven.apache.org</url>
   <properties>
 		<spring.version>4.0.1.RELEASE</spring.version>
-	</properties>
+  </properties>
   <dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -62,6 +62,22 @@
   			<artifactId>slf4j-log4j12</artifactId>
   			<version>1.2</version>
 		</dependency>
+		<!-- jackson  -->
+    	<dependency>
+   			<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
+    		<version>2.8.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.8.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
+		    <version>2.8.0</version>
+		</dependency>
 		<!-- fastjson -->
 		<dependency>
   			<groupId>com.alibaba</groupId>
@@ -72,7 +88,7 @@
 		<dependency>
          	<groupId>org.mybatis</groupId>
          	<artifactId>mybatis</artifactId>
-         	<version>3.3.0</version>
+         	<version>3.2.0</version>
         </dependency>
 	    <dependency>
   			<groupId>org.mybatis</groupId>
@@ -107,6 +123,19 @@
         	<type>pom</type>
         	<scope>compile</scope>
         </dependency>
+        <!-- 奇怪的依赖，本来build path中加入了apache tomcat7类库就可以了，但是后来maven编译时突然报了
+        class file for javax.servlet.ServletContext not found 这个错误，只有加入这个依赖了，其实在tomcat依赖中是有的-->
+        <dependency>
+        	<groupId>javax.servlet</groupId>
+        	<artifactId>javax.servlet-api</artifactId>
+        	<version>3.1.0</version>
+    	</dependency>
+    	<!-- jsp标签 -->
+    	<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>
   </dependencies>
   <build>
     <finalName>mvcsample</finalName>
@@ -114,18 +143,20 @@
     	<plugin>
         	<groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.0</version>
+            <version>2.2</version>
             <configuration>
-            	<server>admin</server>
-                <update>true</update>
+            	<server>Tomcat7</server>
                 <url>http://localhost:8080/manager/text</url>
+                <!-- <username>tomcat</username>
+                <password>123</password> -->
+                <path>/mvcsample</path>
         	</configuration>
     	</plugin>
-    	<plugin>
+    	<!-- <plugin>
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-compiler-plugin</artifactId>
     		<version>2.3.2</version>
-    	</plugin>
+    	</plugin> -->
     </plugins>
   </build>
 </project>
